# numpy_neural_net

./: cats_vs_dogs.ipynb  numpy_neural_net.py  prototyping.ipynb  pyproject.toml
